--- a/tests/samples/ask.yaml
+++ b/tests/samples/ask.yaml
@@ -1,14 +1,13 @@
 flows:
-  - name: onboarding
-    actions:
-      - ask_for_input:
-        text: Some question 
-        var_name: response
-
-      - send_text:
-        text: "The response is: {{$response}}"
-
-      - ask_for_input:
-        text: Some other question
-        var_name: response
-        can_switch_context: false
+- actions:
+  - ask_for_input:
+      text: Some question
+      var_name: response
+  - send_text:
+      text: 'The response is: {{$response}}'
+  - ask_for_input:
+      can_switch_context: false
+      text: Some other question
+      var_name: response
+  name: onboarding
+version: 2.1.0
