--- a/tests/samples/intent.yaml
+++ b/tests/samples/intent.yaml
@@ -3,4 +3,9 @@ flows:
   - send_text:
       text: Hello World
   name: onboarding
+intents:
+- examples:
+  - Hi
+  flow: onboarding
+  name: greeting
 version: 2.1.0
