--- a/tests/samples/qna-flow.yaml
+++ b/tests/samples/qna-flow.yaml
@@ -5,7 +5,7 @@ flows:
   name: greeting
 - actions:
   - send_text:
-      text: What did you mean?
-  name: did_not_get_that
-nlp_fallback: did_not_get_that
+      text: This is the QNA flow
+  name: helpful
+qna_followup: helpful
 version: 2.1.0
