--- a/tests/samples/has-entity.yaml
+++ b/tests/samples/has-entity.yaml
@@ -3,11 +3,11 @@ flows:
   - ask_for_input:
       text: question?
       var_name: bar
-  - condition:
-    - $bar
-    - has_entity
-    - foo
-    send_text:
+  - send_text:
+      condition:
+        - $bar
+        - has_entity
+        - foo
       text: '{{$bar}} has entity foo'
   name: onboarding
 version: 2.1.0
