--- a/tests/samples/intent.yaml
+++ b/tests/samples/intent.yaml
@@ -4,8 +4,6 @@ flows:
       text: Hello World
   name: onboarding
 intents:
-- examples:
-  - Hi
-  flow: onboarding
-  name: greeting
+  - flow: onboarding
+    name: greeting
 version: 2.1.0
