--- a/tests/samples/if-condition-is-not-empty.yaml
+++ b/tests/samples/if-condition-is-not-empty.yaml
@@ -1,15 +1,15 @@
 flows:
 - actions:
-  - change_dialog:
-      dialog: bar_is_set
-    condition:
-    - $foo.bar
-    - is_not_empty
-  - change_dialog:
-      dialog: bar_is_not_set
-    condition:
-    - $foo.bar
-    - is_empty
+  - change_flow:
+      flow: bar_is_set
+      condition:
+      - $foo.bar
+      - is_not_empty
+  - change_flow:
+      flow: bar_is_not_set
+      condition:
+      - $foo.bar
+      - is_empty
   name: onboarding
 - actions:
   - send_text:
