--- a/tests/samples/static-carousel.yaml
+++ b/tests/samples/static-carousel.yaml
@@ -1,6 +1,6 @@
 flows:
 - actions:
-  - send_carousel:
+  - send_static_carousel:
       cards:
       - description: test description
         image_url: http://example.com/images/card-one.jpg
