Fix context switching feature to meet latest platform version

--- a/tests/samples/ask.yaml
+++ b/tests/samples/ask.yaml
@@ -8,5 +8,6 @@ flows:
   - ask_for_input:
       text: Some other question
       var_name: response
+      can_switch_context: false
   name: onboarding
 version: 2.1.0
