--- a/tests/samples/root.yaml
+++ b/tests/samples/root.yaml
@@ -2,6 +2,8 @@ flows:
 - actions:
   - send_text:
       text: Hello
+  - change_flow:
+      flow: second
   name: onboarding
 - actions:
   - send_text:
