Add boolean types in wfc
Add true and false constants.

--- a/tests/samples/conditions.yaml
+++ b/tests/samples/conditions.yaml
@@ -8,10 +8,34 @@ flows:
       text: something
   - send_text:
       condition:
-      - $varialbe
+      - $variable
       - not_equal
       - other string
       text: '{{$variable}}'
+  - send_text:
+      condition:
+      - $variable
+      - equal
+      - true
+      text: something
+  - send_text:
+      condition:
+      - $variable
+      - equal
+      - false
+      text: something
+  - send_text:
+      condition:
+      - $variable
+      - not_equal
+      - true
+      text: something
+  - send_text:
+      condition:
+      - $variable
+      - not_equal
+      - false
+      text: something
   - send_text:
       condition:
       - $variable
