--- a/tests/samples/call-function.yaml
+++ b/tests/samples/call-function.yaml
@@ -4,5 +4,12 @@ flows:
       function: somefunction
       function_params: []
       integration: some_integration
+  - call_integration:
+      function: otherfunction
+      function_params: []
+      integration: other_integration
+  - set_var:
+      value: $other_integration.otherfunction
+      var_name: result
   name: onboarding
 version: 2.1.0
